--- a/src/components/PokemonCard/PokemonCard.css
+++ b/src/components/PokemonCard/PokemonCard.css
@@ -1,14 +1,13 @@
 h2 {
+  font-size: 50px;
   color: var(--text-color);
   text-decoration: 2px solid underline;
-  margin: 10px;
 }
 h5 {
   color: var(--text-color);
   margin: 10px;
 }
 .pokemonImg {
-  object-fit: fill;
 }
 .typeImg {
   margin: 10px;
@@ -19,13 +18,12 @@ h5 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 10px;
   text-align: center;
 }
 .card {
   background-color: #f0f0f0;
   border-radius: 8px;
-  margin: 20px;
   overflow: hidden;
 }
 
