--- a/src/components/NextButton/NextButton.css
+++ b/src/components/NextButton/NextButton.css
@@ -3,7 +3,7 @@
   border: 3px solid #f0f0f0;
   width: 100px;
   height: 100px;
-  justify-content: space-between;
   border-radius: 100%;
   cursor: pointer;
+  margin: 20px;
 }
